# fakemusik

./: .gitignore  CMakeLists.txt  README.md  fakemusic.kdev4
code/: CMakeLists.txt
code/headers/: Measure.hpp  Note.hpp  NoteGenerationStrategy.hpp  Part.hpp  Piece.hpp  RandomNoteGenerationStrategy.hpp
code/source/: Measure.cpp  Note.cpp  NoteGenerationStrategy.cpp  Part.cpp  Piece.cpp  RandomNoteGenerationStrategy.cpp  main.cpp  tinyxml2.cpp
resources/samples/: chorus.ly  chorus.ps  random.ly  random.ps  random.xml  reve.ly  reve.ps
tests/: test.ly  test.xml
